@@ -62,7 +62,7 @@
     <logback.versino>1.2.0</logback.versino>
     <asciidoctor.version>1.5.3</asciidoctor.version>
     <animal-sniffer-maven-plugin.version>1.15</animal-sniffer-maven-plugin.version>
-    <log4j2.version>2.14.1</log4j2.version>
+    <log4j2.version>2.17.2</log4j2.version>
   </properties>
 
   <profiles>
@@ -267,13 +267,6 @@
       <version>${log4j2.version}</version>
       <optional>true</optional>
     </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>${log4j2.version}</version>
-      <type>test-jar</type>
-      <optional>true</optional>
-    </dependency>
 
     <dependency>
       <groupId>commons-logging</groupId>
@@ -365,6 +358,14 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback.versino}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${log4j2.version}</version>
+      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
 
