@@ -18,3 +18,5 @@ ProxyDataSourceBuilder.create(datasource)
 +
 Thanks _https://github.com/sleepo581[Alexei Brinza]_ for this contribution!!
 
+* Add support for Log4j2.  (https://github.com/ttddyy/datasource-proxy/pull/78[Issue-78])
+Thanks _https://github.com/ivasanpag[Ivan Jose Sanchez Pagador]_ for this contribution!!
